# emmett-mongo

./: .gitignore  README.md  pyproject.toml
emmett_mongo/: __init__.py  _patches.py  db.py  ext.py  helpers.py  indexes.py  migrations.py
tests/: conftest.py  test_db.py
